deployment/kubernetes/overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
  name: curious-ape-ingress
  namespace: curious-ape
spec:
  ingressClassName: traefik
  rules:
  - host: ape.danicos.me
    http:
      paths:
      - backend:
          service:
            name: curious-ape
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ape.danicos.me
status:
  loadBalancer: {}
